syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "Protos/V1/Models/HostModels.proto";

package daisi.protos.v1;

message CreateClientKeyRequest{
    string SecretKey = 1;
    string OwnerId = 2;
    string OwnerName = 3;
    SystemRoles OwnerRole = 4;
    repeated string AccessToIds = 5;   
}

message CreateClientKeyResponse{
    string ClientKey = 1;
    google.protobuf.Timestamp KeyExpiration = 2;
    string OwnerId = 3;
}

message ValidateClientKeyRequest{
    string SecretKey = 1;    
    string ClientKey = 2;
}

message ValidateClientKeyResponse{
    bool IsValid = 1;
    google.protobuf.Timestamp KeyExpiration = 2;
    string FailureReason= 3;
}

message SendAuthCodeRequest{
    string EmailOrPhone = 1;
}

message SendAuthCodeResponse{
    bool Success = 1;
    string ErrorMessage = 2;
}

message ValidateAuthCodeRequest{
    string SecretKey = 1;
    string EmailOrPhone = 2;
    string AuthCode = 3;
    string AppId = 4;
}

message ValidateAuthCodeResponse{
    bool Success = 1;
    string ErrorMessage = 2;
    string ClientKey = 3;
    google.protobuf.Timestamp KeyExpiration = 4;
    string UserName = 5;
    string AccountName = 6;
    string AccountId = 7;
}

enum SystemRoles{
    HostDevice = 0;
    App = 1;
    Orc = 2;
    User = 3;
}